[tool.poetry]
name = "repl_python3_DataStructures"
version = "0.1.0"
description = ""
authors = ["velmuruganponnu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
memory-profiler = "^0.58.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
